[workspace]
members = [
    "meet-identifiers",
    "meet-app-components",
    "meet-app-components-macros",
    "meet-mls",
    "meet-policy",
    "proton-claims",
    "mls-utils",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

# Inner crates
[workspace.dependencies]
meet-app-components = { path = "./meet-app-components" }
meet-app-components-macros = { path = "./meet-app-components-macros" }
meet-identifiers = { path = "./meet-identifiers" }
meet-mls = { path = "./meet-mls" }
meet-policy = { path = "./meet-policy" }
proton-claims = { path = "./proton-claims" }
mls-utils = { path = "./mls-utils" }

actix-web = { version = "4.10", default-features = false }
async-nats = { version = "0.45", features = ["server_2_10", "aws-lc-rs"] }
base64 = "0.22"
ciborium = "0.2"
color-eyre = "0.6"
deadpool = "0.12"
email_address = { version = "0.2", default-features = false }
eyre = "0.6"
fluent-uri = "0.3"
futures-util = "0.3"
hex = { version = "0.4", default-features = false }
mysql_async = "0.36"
num_enum = "0.7"
proc-macro2 = "1.0"
quote = "1.0"
redis = { version = "0.32", default-features = false }
semver = "1.0"
serde = "1.0"
facet = "0.31.7"
serde_bytes = "0.11"
serde_json = "1.0"
serde_repr = { version = "0.1", default-features = false }
subtle = { version = "2.6", default-features = false }
syn = "2.0"
thiserror = "2.0"
tokio = { version = "1.46", default-features = false }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = "1.2"
url = { version = "2.5", default-features = false }
webbrowser = { version = "1", default-features = false }
strum = { version = "0.27", default-features = false }
itertools = { version = "0.14", default-features = false }
derive_builder = { version = "0.20", default-features = false }
enum-variants-strings = { version = "0.3", default-features = false }

# crypto
zeroize = { version = "1.8", default-features = false }
signature = "2.2"
ed25519-dalek = { version = "2.2", default-features = false }
digest = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand = { version = "0.8", default-features = false }

[workspace.dependencies.esdicawt]
git = "https://github.com/beltram/esdicawt.git"
tag = "v0.8.0"

[workspace.dependencies.spice-oidc-cwt]
git = "https://github.com/beltram/esdicawt.git"
tag = "v0.8.0"

[workspace.dependencies.status-list]
git = "https://github.com/beltram/esdicawt.git"
tag = "v0.8.0"

[workspace.dependencies.mimi-protocol-mls]
git = "https://github.com/nexun-foundation/mimi-rs.git"
features = ["mls-extensions"]

[workspace.dependencies.mimi-room-policy]
git = "https://github.com/nexun-foundation/mimi-rs.git"

[workspace.dependencies.mimi-content]
git = "https://github.com/nexun-foundation/mimi-rs.git"

[workspace.dependencies.fwd-comp]
git = "https://github.com/nexun-foundation/mimi-rs.git"

[workspace.dependencies.mls-rs]
git = "https://github.com/nexun-foundation/mls-rs.git"

[workspace.dependencies.mls-rs-crypto-rustcrypto]
git = "https://github.com/nexun-foundation/mls-rs.git"

[workspace.dependencies.mls-rs-core]
git = "https://github.com/nexun-foundation/mls-rs.git"

[patch.crates-io.ciborium]
git = "https://github.com/beltram/ciborium"
branch = "simple-value+cde"

[workspace.lints.clippy]
# Enforced Groups
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Cherry Picks
## Nursery
missing_const_for_fn = "allow"
derive_partial_eq_without_eq = "allow"
## restriction
rc_mutex = "warn"
## Pedantic
needless_continue = "warn"
needless_for_each = "warn"
flat_map_option = "warn"
filter_map_next = "warn"
explicit_into_iter_loop = "warn"
manual_ok_or = "warn"
indexing_slicing = "warn"
unused_self = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
mut_mut = "warn"
option_option = "warn"
explicit_iter_loop = "warn"
